--- a/ReNameUI/batchrename.ui
+++ b/ReNameUI/batchrename.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>480</width>
-    <height>640</height>
+    <width>960</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -45,12 +45,19 @@
          </sizepolicy>
         </property>
         <property name="text">
-         <string>Start</string>
+         <string>do it</string>
         </property>
        </widget>
       </item>
       <item row="2" column="1">
        <widget class="QSpinBox" name="si_flag"/>
+      </item>
+      <item row="2" column="0">
+       <widget class="QCheckBox" name="cb_remove">
+        <property name="text">
+         <string>remove code</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
